[gd_scene load_steps=4 format=2]

[ext_resource path="res://imgs/menu.png" type="Texture" id=1]
[ext_resource path="res://scripts/menu.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 800.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
margin_right = 800.0
margin_bottom = 600.0

[node name="Sprite" type="Sprite" parent="PanelContainer/CenterContainer"]
position = Vector2( 406.994, 292.632 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
margin_left = 46.0
margin_top = 211.0
margin_right = 753.0
margin_bottom = 389.0

[node name="StartButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_right = 707.0
margin_bottom = 20.0
text = "START GAME"

[node name="AboutButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 707.0
margin_bottom = 44.0
text = "ABOUT"

[node name="HowToButton2" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 707.0
margin_bottom = 68.0
text = "HOW TO PLAY"

[node name="QuitButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 707.0
margin_bottom = 92.0
text = "QUIT"

[node name="Label" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 707.0
margin_bottom = 178.0
text = "An incredible event happened, and the moon brooke down, scattering cheese all around heart! Brave mice and
micettes jump in their spaceships to reach the moon before the others.
Fight for you life zooming around in you little spaceship, and recover these cheese asteroids!

DISCLAIMER: THIS GAME IS NOWHERE NEAR FINISHED, SO PLAY IT WITH THIS IN MIND!"
align = 1
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/StartButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/HowToButton2" to="." method="_on_HowToButton2_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
